--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,13 @@ android {
 }
 
 dependencies {
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
