--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:theme="@style/Theme.MaterialComponents.NoActionBar"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
@@ -40,7 +40,9 @@
         </activity>
 
         <activity android:name=".ui.Favorites.FavoritesActivity"
-            android:exported="true">
+            android:exported="true"
+            android:parentActivityName=".ui.activity.HomeActivity"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
